k8s/answer-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: answer-deployment
  labels:
    app: answer

spec:
  replicas: 1

  selector:
    matchLabels:
      app: answer

  template:
    metadata:
      labels:
        app: answer

    spec:
      containers:
      - name: answer
        image: answer-service
        imagePullPolicy: IfNotPresent

        ports:
          - containerPort: 9092
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 300m
---
apiVersion: v1
kind: Service

metadata:
  name: answer-service

spec:

  selector:
    app: answer

  ports:
    - protocol: TCP
      port: 80
      targetPort: 9092
