k8s/profile-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: profile-deployment
  labels:
    app: profile

spec:
  replicas: 1

  selector:
    matchLabels:
      app: profile

  template:
    metadata:
      labels:
        app: profile

    spec:
      containers:
      - name: profile
        image: profile-service
        imagePullPolicy: IfNotPresent
        resources: {}

        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service

metadata:
  name: profile-service

spec:

  selector:
    app: profile

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
