k8s/question-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: question-deployment
  labels:
    app: question

spec:
  replicas: 1

  selector:
    matchLabels:
      app: question

  template:
    metadata:
      labels:
        app: question

    spec:
      containers:
      - name: question
        image: seethrough2022/questionservice:latest
        resources: {}

        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service

metadata:
  name: question-service

spec:

  selector:
    app: question

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
