k8s/search-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: search-deployment
  labels:
    app: search

spec:
  replicas: 1

  selector:
    matchLabels:
      app: search

  template:
    metadata:
      labels:
        app: search

    spec:
      containers:
      - name: search
        image: seethrough2022/searchservice:latest
        resources: {}

        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service

metadata:
  name: search-service

spec:

  selector:
    app: search

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
