k8s/upload-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: upload-deployment
  labels:
    app: upload

spec:
  replicas: 1

  selector:
    matchLabels:
      app: upload

  template:
    metadata:
      labels:
        app: upload

    spec:
      containers:
      - name: upload
        image: upload-service
        imagePullPolicy: IfNotPresent
        resources: {}

        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service

metadata:
  name: upload-service

spec:

  selector:
    app: upload

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
