k8s/basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    # gateway
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # instead of setting a using base path in asp.net core startup. or configuring the controller to match the path. 
    # I have chosen to use a rewrite. this will remove everything before the (/|$)(.*) when proxying to the given service.
    # This makes it so that we have to change less files.
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - dateblind.me
    secretName: blind-date-tls
  rules:
    - host: dateblind.me
      http:
        paths:
          # Question Service 
          - path: /question-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: question-service
                port:
                  number: 80
          # Answer Service 
          - path: /answer-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: answer-service
                port:
                  number: 80
          # Upload Service 
          - path: /upload-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: upload-service
                port:
                  number: 80
          # Report Service 
          - path: /report-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: report-service
                port:
                  number: 80
          # Search Service 
          - path: /search-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 80
        # Profile Service 
          - path: /profile-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80
